dshop/static/dshop/css/dmodules.css
/* ... */
.dmjob-plugin-box {
    overflow: hidden;
    overflow-y: hidden;
    min-height: 220px;
    max-height: 220px;
}
.dmjob-plugin-box:hover {
    overflow-y: auto;
}
/* ===--- Module Portfolio ---=== */
.section-portfolio .portfolio_item {
    background-color: #fff;
    position: relative;
    margin-bottom: 30px;
    transition: all 0.5s ease-in-out;
    box-shadow: 0 0 7px rgb(0 0 0 / 10%);
}
.section-portfolio .portfolio_img {
    font-size: 0;
    line-height: 0;
}
.section-portfolio .portfolio_img a {
    overflow: hidden;
    display: inline-block;
}
.section-portfolio .portfolio_img a img {
    transform: scale(1);
    transition: transform 0.4s;
}
.section-portfolio .portfolio_img a:hover img {
    transform: scale(1.1);
}
.section-portfolio .portfolio_title a {
    display: block;
    padding: 1rem;
}
/* ===--- Plugin: TextCarrousel ---=== */
.dmplugin-textcarrousel {
    margin: 0 50px;
}
@media (max-width: 1199px) {
    .dmplugin-textcarrousel {
        margin: 0;
    }
}

.dmalign-start {
    align-items: flex-start;
}

